[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://coin/Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://power_up/PowerUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://enviroment/grass/grass.png" type="Texture" id=4]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://enviroment/cactus/Cactus.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/Coin.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Level.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/Hit.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/Powerup.wav" type="AudioStream" id=11]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Coin = ExtResource( 2 )
Power_up = ExtResource( 3 )
playtime = 30

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Player" parent="." index="1" instance=ExtResource( 5 )]

position = Vector2( 239.784, 489.998 )

[node name="CoinContainer" type="Node" parent="." index="2"]

[node name="PlayerStart" type="Position2D" parent="." index="3"]

position = Vector2( 240, 350 )
_sections_unfolded = [ "Transform" ]

[node name="Cactus" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 236.197, 120.968 )
scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." index="5" instance=ExtResource( 7 )]

[node name="GameTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="PowerUpTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="CoinSound" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="LevelSound" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="EndSound" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="PowerUpSound" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]

[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]

[connection signal="start_game" from="HUD" to="." method="new_game"]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]


